--- a/environments/dev/k8s/frontend.yaml
+++ b/environments/dev/k8s/frontend.yaml
@@ -1,8 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: eshop-frontend
+  name: eshop-frontend-v1
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: eshop-frontend
@@ -10,6 +11,7 @@ spec:
     metadata:
       labels:
         app: eshop-frontend
+        version: v1
     spec:
       containers:
         - name: eshop-frontend
@@ -23,6 +25,34 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: eshop-frontend-v2
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: eshop-frontend
+  template:
+    metadata:
+      labels:
+        app: eshop-frontend
+        version: v2
+    spec:
+      containers:
+        - name: eshop-frontend
+          image: gcr.io/architect-certification-289902/26/eshop-frontend:2
+          ports:
+          - containerPort: 8080
+          resources:
+            requests:
+              cpu: 100m
+              memory: 64Mi
+            limits:
+              cpu: 200m
+              memory: 128Mi              
 ---
 apiVersion: v1
 kind: Service
