backend,product hpa 적용

--- a/environments/prod/k8s/productservice.yaml
+++ b/environments/prod/k8s/productservice.yaml
@@ -44,3 +44,22 @@ spec:
   - name: api
     port: 8092
     targetPort: 8092
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: eshop-productservice-hpa
+spec:
+  maxReplicas: 5
+  minReplicas: 2
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: eshop-productservice
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 60
