--- a/environments/prod/k8s/backend.yaml
+++ b/environments/prod/k8s/backend.yaml
@@ -41,3 +41,22 @@ spec:
     app: eshop-backend
   ports:
   - port: 8090
+---
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: eshop-backend-hpa
+spec:
+  maxReplicas: 5
+  minReplicas: 2
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: eshop-backend
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 60
