--- a/environments/prod/k8s/backend.yaml
+++ b/environments/prod/k8s/backend.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: eshop-backend
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: eshop-backend
@@ -22,7 +23,7 @@ spec:
             - name: URL_PRODUCTSERVICE
               value: http://eshop-productservice:8092
             - name: NATS_SPRING_SERVER
-              value: "nats://nats-cluster:4222"
+              value: "nats://nats-cluster.default.svc.cluster.local:4222"
           resources:
             requests:
               cpu: 500m
