--- a/environments/prod/k8s/cartservice.yaml
+++ b/environments/prod/k8s/cartservice.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: eshop-cartservice
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: eshop-cartservice
@@ -17,10 +18,12 @@ spec:
           ports:
           - containerPort: 8091
           env:
-            - name: SPRING_REDIS_HOST
-              value: redis
+            - name: SPRING_REDIS_CLUSTER_NODES
+              value: redis-redis-cluster.default.svc.cluster.local:6379
+            - name: SPRING_REDIS_CLUSTER_MAX-REDIRECTS
+              value: "3"
             - name: NATS_SPRING_SERVER
-              value: "nats://nats-cluster:4222"
+              value: "nats://nats-cluster.default.svc.cluster.local:4222"
 ---
 apiVersion: v1
 kind: Service
